--- a/Legacy View Project/app/src/main/AndroidManifest.xml
+++ b/Legacy View Project/app/src/main/AndroidManifest.xml
@@ -13,8 +13,18 @@
         android:theme="@style/Theme.LegacyViewProject"
         tools:targetApi="31">
         <activity
+            android:name=".RecyclerViewActivity"
+            android:exported="false"
+            android:label="@string/title_activity_recycler_view"
+            android:theme="@style/Theme.LegacyViewProject" />
+        <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" />
+        <activity
+            android:name=".LayoutsActivity"
+            android:exported="true"
+            android:label="@string/title_activity_layouts"
+            android:theme="@style/Theme.LegacyViewProject">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
