--- a/6 - ComposeLayoutDesignDemo/app/build.gradle
+++ b/6 - ComposeLayoutDesignDemo/app/build.gradle
@@ -63,4 +63,7 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    // Icon dependency
+     implementation 'androidx.compose.material:material-icons-extended:1.1.1'
 }
