--- a/6 - ComposeLayoutDesignDemo/app/build.gradle
+++ b/6 - ComposeLayoutDesignDemo/app/build.gradle
@@ -66,4 +66,7 @@ dependencies {
 
     // Icon dependency
      implementation 'androidx.compose.material:material-icons-extended:1.1.1'
+
+    // Gson to convert json file data
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
