--- a/6 - ComposeLayoutDesignDemo/app/build.gradle
+++ b/6 - ComposeLayoutDesignDemo/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
-    // Icon dependency
+    // Icon dependency https://developer.android.com/reference/kotlin/androidx/compose/material/icons/package-summary
      implementation 'androidx.compose.material:material-icons-extended:1.1.1'
 
     // Gson to convert json file data
