--- a/Tweetsy/app/build.gradle
+++ b/Tweetsy/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 
 android {
     namespace 'com.example.tweetsy'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.tweetsy"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -39,7 +39,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion '1.4.0'
     }
     packagingOptions {
         resources {
@@ -51,7 +51,7 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.8.2'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
@@ -82,7 +82,7 @@ dependencies {
 
     def nav_version = "2.7.6"
     implementation "androidx.navigation:navigation-compose:$nav_version"
-    implementation "androidx.hilt:hilt-natigation-compose:1.0.0" // the videmodel will be working from navigation
+    implementation "androidx.hilt:hilt-navigation:1.1.0" // the videmodel will be working from navigation
     // framework, means navigation framework will be triggering ViewModel and we're using hilt hence
     // we want to trigger it through hilt that's why we're using this dependency.
 }
